# ntds-icons

./: Cargo.toml  LICENSE-MIT  OFL.txt  README.md
.github/workflows/: pages.yml  release.yml
assets/: codepoints.json  index.html
docs/plans/: 2026-06-17-distribution-design.md  2026-06-17-distribution-implementation.md  2026-06-17-ntds-icons-implementation.md  2026-06-17-ntds-icons-standalone-crate-design.md
src/: codepoints.rs  layout.rs  lib.rs  shapes.rs
src/shapes/: tests.rs
tests/: drift.rs
